{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 500,
  "lineage": "2a49049d-de4c-3c1e-f843-6f6d19ff27cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f8a213df8bc089",
            "arn": "arn:aws:ec2:us-east-1:502240965697:instance/i-0269320ba03a55318",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0269320ba03a55318",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef4337d843698b2d",
            "private_dns": "ip-172-31-92-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.92.4",
            "public_dns": "ec2-44-203-157-189.compute-1.amazonaws.com",
            "public_ip": "44.203.157.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-036172d0ec99688af",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b27901c38cb7b8ff",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b861685baed33704"
            ]
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance-foo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f8a213df8bc089",
            "arn": "arn:aws:ec2:us-east-1:502240965697:instance/i-0189a83c43048101e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0189a83c43048101e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a8f56ec84e42b4de",
            "private_dns": "ip-172-31-84-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.84.78",
            "public_dns": "ec2-3-90-43-110.compute-1.amazonaws.com",
            "public_ip": "3.90.43.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0513133239cbffe57",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b27901c38cb7b8ff",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b861685baed33704"
            ]
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webAppEc2Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff8a91507f77f867",
            "arn": "arn:aws:ec2:us-east-1:502240965697:instance/i-0cb45827291b5049d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb45827291b5049d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b9b08a91050ee06f",
            "private_dns": "ip-10-0-1-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.149",
            "public_ip": "3.85.99.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fe044aa7071fbdb4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b43bd660e0f8c83",
            "tags": {
              "Name": "webAppEc2Instance"
            },
            "tags_all": {
              "Name": "webAppEc2Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-095c3944494ea6603",
              "sg-0d8b630e88ddba499"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.webAppVpcPublicSubnet",
            "module.networking.aws_vpc.webAppVpc",
            "module.security_group.aws_security_group.ec2PythonApi",
            "module.security_group.aws_security_group.webAppSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webAppInternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:internet-gateway/igw-06734ebc4d25ec138",
            "id": "igw-06734ebc4d25ec138",
            "owner_id": "502240965697",
            "tags": {
              "Name": "webAppInternetGateway"
            },
            "tags_all": {
              "Name": "webAppInternetGateway"
            },
            "vpc_id": "vpc-07ca51271be690eb1"
          },
          "dependencies": [
            "module.networking.aws_vpc.webAppVpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webAppPrivateSubnetRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:route-table/rtb-056879f2718d6602b",
            "id": "rtb-056879f2718d6602b",
            "owner_id": "502240965697",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "webAppPrivateSubnetRouteTable"
            },
            "tags_all": {
              "Name": "webAppPrivateSubnetRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ca51271be690eb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.webAppVpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webAppPublicSubnetRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:route-table/rtb-08addd8d63cc37920",
            "id": "rtb-08addd8d63cc37920",
            "owner_id": "502240965697",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06734ebc4d25ec138",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webAppPublicSubnetRouteTable"
            },
            "tags_all": {
              "Name": "webAppPublicSubnetRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ca51271be690eb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.webAppInternetGateway",
            "module.networking.aws_vpc.webAppVpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webAppPrivateSubnetRouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f76deb2277b7773e",
            "route_table_id": "rtb-056879f2718d6602b",
            "subnet_id": "subnet-09eb10eae3f3f66b1"
          },
          "dependencies": [
            "module.networking.aws_route_table.webAppPrivateSubnetRouteTable",
            "module.networking.aws_subnet.webAppVpcPrivateSubnet",
            "module.networking.aws_vpc.webAppVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050b54f3fc2f510f4",
            "route_table_id": "rtb-056879f2718d6602b",
            "subnet_id": "subnet-07a055d2a514c8055"
          },
          "dependencies": [
            "module.networking.aws_route_table.webAppPrivateSubnetRouteTable",
            "module.networking.aws_subnet.webAppVpcPrivateSubnet",
            "module.networking.aws_vpc.webAppVpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webAppPublicSubnetRouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d371c577a44fd679",
            "route_table_id": "rtb-08addd8d63cc37920",
            "subnet_id": "subnet-06b43bd660e0f8c83"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.webAppInternetGateway",
            "module.networking.aws_route_table.webAppPublicSubnetRouteTable",
            "module.networking.aws_subnet.webAppVpcPublicSubnet",
            "module.networking.aws_vpc.webAppVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b9fac0ff5e8de1f",
            "route_table_id": "rtb-08addd8d63cc37920",
            "subnet_id": "subnet-0388fa580d2abea49"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.webAppInternetGateway",
            "module.networking.aws_route_table.webAppPublicSubnetRouteTable",
            "module.networking.aws_subnet.webAppVpcPublicSubnet",
            "module.networking.aws_vpc.webAppVpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webAppVpcPrivateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:subnet/subnet-09eb10eae3f3f66b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09eb10eae3f3f66b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502240965697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webAppVpcPrivateSubnet-1"
            },
            "tags_all": {
              "Name": "webAppVpcPrivateSubnet-1"
            },
            "vpc_id": "vpc-07ca51271be690eb1"
          },
          "dependencies": [
            "module.networking.aws_vpc.webAppVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:subnet/subnet-07a055d2a514c8055",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a055d2a514c8055",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502240965697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webAppVpcPrivateSubnet-2"
            },
            "tags_all": {
              "Name": "webAppVpcPrivateSubnet-2"
            },
            "vpc_id": "vpc-07ca51271be690eb1"
          },
          "dependencies": [
            "module.networking.aws_vpc.webAppVpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webAppVpcPublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:subnet/subnet-06b43bd660e0f8c83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b43bd660e0f8c83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502240965697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webAppVpcPublicSubnet-1"
            },
            "tags_all": {
              "Name": "webAppVpcPublicSubnet-1"
            },
            "vpc_id": "vpc-07ca51271be690eb1"
          },
          "dependencies": [
            "module.networking.aws_vpc.webAppVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:subnet/subnet-0388fa580d2abea49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0388fa580d2abea49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502240965697",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webAppVpcPublicSubnet-2"
            },
            "tags_all": {
              "Name": "webAppVpcPublicSubnet-2"
            },
            "vpc_id": "vpc-07ca51271be690eb1"
          },
          "dependencies": [
            "module.networking.aws_vpc.webAppVpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webAppVpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:vpc/vpc-07ca51271be690eb1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c75ef674201d61d",
            "default_route_table_id": "rtb-0055f5e56cf42f7aa",
            "default_security_group_id": "sg-0a1023b3504a9ad1d",
            "dhcp_options_id": "dopt-09136faf920f16a64",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ca51271be690eb1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0055f5e56cf42f7aa",
            "owner_id": "502240965697",
            "tags": {
              "Name": "webAppVpc"
            },
            "tags_all": {
              "Name": "webAppVpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dbSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:security-group/sg-0ad8daa575037e71c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ad8daa575037e71c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240806201932936200000002",
            "name_prefix": "terraform-",
            "owner_id": "502240965697",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dbSecurityGroup"
            },
            "tags_all": {
              "Name": "dbSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ca51271be690eb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.webAppVpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2PythonApi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:security-group/sg-095c3944494ea6603",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-095c3944494ea6603",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "terraform-20240806201932936900000004",
            "name_prefix": "terraform-",
            "owner_id": "502240965697",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2PythonApi"
            },
            "tags_all": {
              "Name": "ec2PythonApi"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ca51271be690eb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.webAppVpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webAppSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:security-group/sg-0d8b630e88ddba499",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8b630e88ddba499",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240806201932936700000003",
            "name_prefix": "terraform-",
            "owner_id": "502240965697",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webAppSecurityGroup"
            },
            "tags_all": {
              "Name": "webAppSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ca51271be690eb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.webAppVpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:security-group-rule/sgr-03c9089a469fdfc32",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03c9089a469fdfc32",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d8b630e88ddba499",
            "security_group_rule_id": "sgr-03c9089a469fdfc32",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.webAppVpc",
            "module.security_group.aws_security_group.webAppSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:security-group-rule/sgr-00233fe66676caa62",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-00233fe66676caa62",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d8b630e88ddba499",
            "security_group_rule_id": "sgr-00233fe66676caa62",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.webAppVpc",
            "module.security_group.aws_security_group.webAppSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:security-group-rule/sgr-0f988365c8cc7d9c4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0f988365c8cc7d9c4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d8b630e88ddba499",
            "security_group_rule_id": "sgr-0f988365c8cc7d9c4",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.webAppVpc",
            "module.security_group.aws_security_group.webAppSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:security-group-rule/sgr-03a4733d1486db11f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03a4733d1486db11f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d8b630e88ddba499",
            "security_group_rule_id": "sgr-03a4733d1486db11f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.webAppVpc",
            "module.security_group.aws_security_group.webAppSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "mysqlSecurityRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:security-group-rule/sgr-0946c800dcab823e3",
            "cidr_ipv4": "10.0.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0946c800dcab823e3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ad8daa575037e71c",
            "security_group_rule_id": "sgr-0946c800dcab823e3",
            "tags": {
              "Name": "ingressRuleMysql-1"
            },
            "tags_all": {
              "Name": "ingressRuleMysql-1"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.webAppVpcPublicSubnet",
            "module.networking.aws_vpc.webAppVpc",
            "module.security_group.aws_security_group.dbSecurityGroup"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:security-group-rule/sgr-0c76430d5709f78d7",
            "cidr_ipv4": "10.0.2.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0c76430d5709f78d7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ad8daa575037e71c",
            "security_group_rule_id": "sgr-0c76430d5709f78d7",
            "tags": {
              "Name": "ingressRuleMysql-2"
            },
            "tags_all": {
              "Name": "ingressRuleMysql-2"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.webAppVpcPublicSubnet",
            "module.networking.aws_vpc.webAppVpc",
            "module.security_group.aws_security_group.dbSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "pythonApiSecurityRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502240965697:security-group-rule/sgr-00a5f9ea516d742c0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5000,
            "id": "sgr-00a5f9ea516d742c0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095c3944494ea6603",
            "security_group_rule_id": "sgr-00a5f9ea516d742c0",
            "tags": null,
            "tags_all": {},
            "to_port": 5000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.webAppVpc",
            "module.security_group.aws_security_group.ec2PythonApi"
          ]
        }
      ]
    }
  ]
}